[package]
name = "mould"
version = "0.0.21"
readme = "README.md"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
description = "Rust web-framework for websocket based web-apps."
repository = "https://github.com/DenisKolodin/mould"
license = "MIT/Apache-2.0"

[features]
default = ["iomould", "wsmould"]
iomould = []
wsmould = ["hyper", "websocket"]

[dependencies]
log = "0.3.7"
serde_json = "1.0.0"
slab = "0.3.0"
hyper = { version = "0.10.8", optional = true }
websocket = { version = "0.19.1", optional = true }
