[package]
name = "mould"
version = "0.0.25"
readme = "README.md"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
description = "Rust web-framework for websocket based web-apps."
repository = "https://github.com/DenisKolodin/mould"
license = "MIT/Apache-2.0"

[features]
default = ["iomould", "wsmould"]
iomould = []
wsmould = ["hyper", "websocket"]

[dependencies]
log = "0.3.8"
error-chain = "0.10.0"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
slab = "0.4.0"
hyper = { version = "0.11.2", optional = true }
websocket = { version = "0.20.2", optional = true }
