[package]
name = "mould"
version = "0.1.0"
readme = "README.md"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
description = "Rust web-framework for websocket based web-apps."
repository = "https://github.com/DenisKolodin/mould"
license = "MIT/Apache-2.0"

[features]
default = ["iomould", "wsmould"]
iomould = []
wsmould = ["hyper", "websocket"]

[dependencies]
log = "0.3.8"
failure = "0.1.1"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
hyper = { version = "0.11.2", optional = true }
websocket = { version = "0.20.2", optional = true }
